Restored WS client tests to their former glory. Closes #285
Signed-off-by: Marc-Antoine Gouillart <marsu_pilami@msn.com>