@@ -8,15 +8,48 @@
 		<artifactId>jqm-all</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>jqm-integration-tests</artifactId>
+	<artifactId>jqm-integration-tests-ws</artifactId>
+
 
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>http://jqm.readthedocs.org</url>
 	<description>Test suite for the JQM engine + service</description>
 
-	<properties>
-		<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-	</properties>
+	<dependencies>
+		<!-- The very goal of this artifact is to run tests with the other API 
+			implementation -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>jqm-integration-tests</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<exclusions>
+				<exclusion>
+					<artifactId>jqm-api-client-jdbc</artifactId>
+					<groupId>com.enioka.jqm</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>jqm-api-client-jersey</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<!-- needed by war -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons.logging.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
+		</dependency>
+
+	</dependencies>
+
 
 	<build>
 		<plugins>
@@ -122,129 +155,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<!-- A mail server to test notifications -->
-			<plugin>
-				<groupId>com.btmatthews.maven.plugins</groupId>
-				<artifactId>emailserver-maven-plugin</artifactId>
-				<version>1.1.1</version>
-
-				<configuration>
-					<monitorKey>emailserver</monitorKey>
-					<monitorPort>11025</monitorPort>
-				</configuration>
-
-				<executions>
-					<execution>
-						<id>run-mail</id>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<phase>process-test-classes</phase>
-						<configuration>
-							<daemon>true</daemon>
-							<type>greenmail</type>
-							<portOffset>10000</portOffset>
-							<useSSL>false</useSSL>
-							<mailboxes>
-								<mailbox>
-									<login>testlogin</login>
-									<password>testpassword</password>
-									<email>test@jqm.com</email>
-								</mailbox>
-							</mailboxes>
-						</configuration>
-					</execution>
-					<execution>
-						<id>stop-mail</id>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-						<phase>post-integration-test</phase>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Copy test payload XML files -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<id>copy-payloads</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${basedir}/target/payloads</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${basedir}/src/test/resources/payloads</directory>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Include all tests inside the result jar so as to be able to import 
-				the tests in other artifacts -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
-
-	<dependencies>
-
-
-		<!-- This project mostly tests the service JQM distribution -->
-		<dependency>
-			<groupId>com.enioka.jqm</groupId>
-			<artifactId>jqm-service</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<!-- Tests helpers -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.enioka.jqm</groupId>
-			<artifactId>jqm-test-helpers</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<!-- DB drivers for tests -->
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>${hsqldb.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.1.1.jre6</version>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.41</version>
-		</dependency>
-
-	</dependencies>
 </project>
